--- a/.env
+++ b/.env
@@ -5,3 +5,13 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=roommate-afbb1.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=30657475695
 REACT_APP_FIREBASE_APP_ID=1:30657475695:web:b4bd6c3480e41293d6899a
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-RY8FSKW1Z0
+
+
+# const firebaseConfig = {
+#   apiKey: "AIzaSyCaemz3u1zCygm6JvQKq62rPbz05Z-eidA",
+#   authDomain: "room-mate-newapp.firebaseapp.com",
+#   projectId: "room-mate-newapp",
+#   storageBucket: "room-mate-newapp.firebasestorage.app",
+#   messagingSenderId: "888342566499",
+#   appId: "1:888342566499:web:31e66de6e11380c4558a56"
+# }
